# logalyser

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/logalyser/: analyser.py  cli.py  parser.py
tests/: test_analyser.py  test_parser.py
